[package]
name = "benches"
version = "0.0.1"
publish = false
edition = "2018"

[workspace]
members = ["."]

[dependencies]
yarte = { path = "../yarte", version = "*", features = ["fixed"] }
itoa = "0.4"
v_htmlescape = "0.6"

[build-dependencies]
yarte = { path = "../yarte", version = "*", featues = ["fixed"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "yarte"
harness = false
path = "src/all.rs"
