[package]
name = "benches"
version = "0.0.1"
publish = false
edition = "2021"

[workspace]
members = ["."]

[dependencies]
yarte = { path = "../yarte", version = "*", features = ["bytes-buf"] }
v_htmlescape = "0.15"

[build-dependencies]
yarte = { path = "../yarte", version = "*" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "yarte"
harness = false
path = "src/all.rs"
