[package]
name = "benches"
version = "0.0.1"
publish = false
edition = "2021"

workspace = ".."

[dependencies]
yarte = { workspace = true, features = ["bytes-buf"] }
v_htmlescape = "0.15"

[build-dependencies]
yarte_helpers = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "yarte"
harness = false
path = "src/all.rs"
