[package]
name = "delorean"
version = "0.2.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "A simple single thread reactor pattern for wasm"
documentation = "https://docs.rs/delorean"
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
keywords = ["reactor"]
license = "MIT/Apache-2.0"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
wasm-bindgen-futures = "0.4"
async-timer = "0.7"
wasm-bindgen-test = "0.3"
futures = "0.3"

[build-dependencies]
yarte_helpers = { version = "0.12.2", path = "../yarte_helpers", default-features = false }
