[package]
name = "example"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2018"

workspace = ".."

[dependencies]
env_logger = "0.7"

yarte = { path = "../yarte", version = "*", features = ["with-actix-web"]  }

actix-rt = "1.0"
actix-web = "2.0.0-alpha"

[build-dependencies]
yarte = { path = "../yarte", version = "*", features = ["with-actix-web"]  }
