[package]
name = "yarte"
version = "0.15.7"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Type-safe, compiled Handlebars"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte"
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
keywords = ["template", "handlebars", "html", "wasm"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = []
wasm = ["yarte_derive/wasm-server", "json", "bytes-buf"]
json = ["yarte_helpers/json", "yarte_derive/json", "bytes-buf"]
html-min = ["yarte_derive/html-min"]
bytes-buf = ["buf-min", "yarte_helpers/bytes-buf", "yarte_derive/bytes-buf"]

[dependencies]
yarte_derive = { version = "~0.15.4", path = "../yarte_derive" }
yarte_helpers = { version = "~0.15.1", path = "../yarte_helpers" }
buf-min = { version = "0.7", optional = true }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
yarte_helpers = { version = "~0.15.1", path = "../yarte_helpers" }

[package.metadata.docs.rs]
all-features = true
