[package]
name = "yarte"
version = "0.15.7"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Type-safe, compiled Handlebars"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte"
edition = "2021"
include = ["src/**/*", "Cargo.toml"]
keywords = ["template", "handlebars", "html", "wasm"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = []
json = ["yarte_helpers/json", "yarte_derive/json", "bytes-buf"]
bytes-buf = ["buf-min", "yarte_helpers/bytes-buf", "yarte_derive/bytes-buf"]

[dependencies]
yarte_derive = { workspace = true }
yarte_helpers = { workspace = true }
buf-min = { workspace = true, optional = true }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
serde_json = "1.0"
serde = { version = "1.0.200", features = ["derive"] }

[build-dependencies]
yarte_helpers = { version = "~0.15.1", path = "../yarte_helpers" }

[package.metadata.docs.rs]
all-features = true
