[package]
name = "yarte_codegen"
version = "0.11.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Code generator for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_codegen"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
bytes-buf = []
fixed = []
html-min = ["yarte_dom", "yarte_html"]
wasm-app = ["indexmap", "heck", "yarte_hir/wasm-app", "yarte_dom/wasm-app"]
wasm-server = ["yarte_dom", "yarte_html"]

[dependencies]
yarte_helpers = { version = "0.11.2", path = "../yarte_helpers" }
yarte_hir = { version = "0.11.2", path = "../yarte_hir" }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version= "1.0", features = ["full", "extra-traits"] }

yarte_dom = { version = "0.11.2", path = "../yarte_dom", optional = true }
yarte_html = { version = "0.11.2", path = "../yarte_html", optional = true }
heck = { version = "0.3", optional = true }
mime_guess = { version = "2.0", optional = true }
indexmap = { version = "1.3", optional = true }

[dev-dependencies]
# Remove in favor of serialize dom
yarte_parser = { version = "0.11.2", path = "../yarte_parser" }

[package.metadata.docs.rs]
all-features = true
