[package]
name = "yarte_codegen"
version = "0.15.7"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Code generator for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_codegen"
edition = "2021"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
bytes-buf = []

[dependencies]
yarte_helpers = { version = "~0.15.1", path = "../yarte_helpers" }
yarte_hir = { version = "~0.15.3", path = "../yarte_hir" }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

heck = { version = "0.4", optional = true }
mime_guess = { version = "2.0", optional = true }
indexmap = { version = "1.9", optional = true }

[dev-dependencies]
# Remove in favor of serialize dom
yarte_parser = { version = "~0.15.0", path = "../yarte_parser" }

[package.metadata.docs.rs]
all-features = true
