[package]
name = "yarte_config"
version = "0.3.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Config file parser of yarte"
categories = ["template-engine"]
documentation = "https://docs.rs/yarte_config"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
