[package]
name = "yarte_derive"
version = "0.10.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Procedural macro package for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_derive"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]
wasm-app = ["yarte_hir/wasm-app", "yarte_codegen/wasm-app"]
html-min = ["yarte_codegen/html-min"]
wasm-server = ["yarte_codegen/wasm-server"]
fixed = ["yarte_codegen/fixed", "yarte_helpers/fixed"]
bytes = ["fixed", "yarte_codegen/bytes"]

[dependencies]
yarte_codegen = { version = "0.10.0", path = "../yarte_codegen" }
yarte_helpers = { version = "0.10.0", path = "../yarte_helpers" }
yarte_hir = { version = "0.10.0", path = "../yarte_hir" }
yarte_parser = { version = "0.10.0", path = "../yarte_parser" }

prettyprint = "0.8"

proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

tempfile = "3.0"
toolchain_find = "0.1"

[package.metadata.docs.rs]
all-features = true
