[package]
name = "yarte_derive"
version = "0.15.6"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Procedural macro package for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_derive"
edition = "2021"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]
bytes-buf = ["yarte_codegen/bytes-buf"]
json = ["v_jsonescape", "yarte_helpers/json"]

[dependencies]
yarte_codegen = { workspace = true }
yarte_helpers = { workspace = true }
yarte_hir = { workspace = true }
yarte_parser = { workspace = true }

v_jsonescape = { version = "0.7", optional = true }

proc-macro2 = { workspace = true }
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
all-features = true
