[package]
name = "yarte_dom"
version = "0.7.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Markup parser"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_dom"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
wasm-app = ["yarte_hir/wasm-app"]

[dependencies]
yarte_hir = { version = "0.7.0", path = "../yarte_hir" }
yarte_helpers = { version = "0.7.0", path = "../yarte_helpers" }
yarte_html = { version = "0.7.0", path = "../yarte_html" }

markup5ever = "0.10"

quote-impersonated = "0.1"
syn-impersonated = { version= "0.1", features = ["full", "visit", "extra-traits"] }
