[package]
name = "yarte_format"
version = "0.8.3"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
edition = "2018"
description = "Proc-macro, compiled Handlebars"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte"
include = ["src/**/*", "Cargo.toml"]
keywords = ["template", "handlebars", "html", "wasm"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
yarte_derive = { version = "0.8.3", path = "../yarte_derive" }
yarte_helpers = { version = "0.8.3", path = "../yarte_helpers", features = ["display-fn"] }

[build-dependencies]
yarte_helpers = { version = "0.8.3", path = "../yarte_helpers", default-features = false }
