[package]
name = "yarte_helpers"
version = "0.12.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Helper collection for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_helpers"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[features]
big-num-32 = []
config = ["serde", "toml"]
default = ["markup", "config", "logger", "display-fn"]
display-fn = []
json = ["buf-min", "chrono", "serde", "serde_json", "v_jsonescape", "ryu-ad"]
ryu-ad = ["ryu"]
fixed = ["v_htmlescape", "itoa", "ryu-ad"]
markup = ["v_htmlescape", "itoa", "dtoa"]
bytes-buf = ["buf-min", "v_htmlescape", "itoa", "ryu-ad"]
logger = ["bat", "tempfile", "toolchain_find"]

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
v_htmlescape = { version = "0.10", optional = true }
v_jsonescape = { version = "0.2", optional = true }
itoa = { version = "0.4", features = ["i128"], optional = true }
dtoa = { version = "0.4", optional = true }
ryu = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }

buf-min = { version = "0.2", optional = true}

bat = { version = "0.16", default-features = false, features = ["regex-fancy", "paging"], optional = true }
tempfile = { version = "3.0", optional = true }
toolchain_find = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
