[package]
name = "yarte_helpers"
version = "0.15.6"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Helper collection for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_helpers"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[features]
big-num-32 = []
config = ["serde", "toml"]
default = ["markup", "config", "logger", "display-fn"]
display-fn = []
json = ["buf-min", "chrono", "serde", "serde_json", "v_jsonescape", "ryu-ad"]
ryu-ad = ["ryu"]
fixed = ["v_htmlescape", "itoa", "ryu-ad"]
markup = ["v_htmlescape", "itoa", "dtoa"]
bytes-buf = ["buf-min", "v_htmlescape", "itoa", "ryu-ad"]
logger = ["prettyplease", "syn"]
extra-renders = ["render-uuid"]
render-uuid = ["buf-min", "uuid"]

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
v_htmlescape = { version = "~0.15.7", optional = true }
v_jsonescape = { version = "~0.6.1", optional = true }
itoa = { version = "0.4", features = ["i128"], optional = true }
dtoa = { version = "0.4", optional = true }
ryu = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }

prettyplease = { version = "0.1", optional = true }
syn = {version = "1.0", optional = true}

serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }

buf-min = { version = "0.6.0", optional = true}

uuid = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1.0"
random-fast-rng = "0.1"

[package.metadata.docs.rs]
all-features = true
