[package]
name = "yarte_helpers"
version = "0.15.8"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Helper collection for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_helpers"
edition = "2021"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[features]
big-num-32 = []
default = ["markup",  "logger"]
json = ["buf-min", "chrono", "serde_json", "v_jsonescape/bytes-buf", "ryu-ad"]
ryu-ad = ["ryu"]
markup = ["v_htmlescape", "itoa", "dtoa"]
bytes-buf = ["buf-min", "v_htmlescape/bytes-buf", "itoa", "ryu-ad"]
logger = ["prettyplease", "syn"]
extra-renders = ["render-uuid"]
render-uuid = ["buf-min", "uuid"]

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
v_htmlescape = { version = "0.15", optional = true }
v_jsonescape = { version = "0.7", optional = true, features = [] }
itoa = { version = "1.0", optional = true }
dtoa = { version = "1.0", optional = true }
ryu = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }

prettyplease = { version = "0.2", optional = true }
syn = {version = "2.0", optional = true}

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7" }
serde_json = { version = "1.0", optional = true }

buf-min = { workspace = true, optional = true}

uuid = { version = "1.3", optional = true }

[dev-dependencies]
serde_json = "1.0"
random-fast-rng = "0.1"

[package.metadata.docs.rs]
all-features = true
