[package]
name = "yarte_hir"
version = "0.8.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Intermediate representation for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_hir"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
wasm-app = []

[dependencies]
yarte_helpers = { version = "0.8.2", path = "../yarte_helpers" }
yarte_parser = { version = "0.8.2", path = "../yarte_parser" }

v_eval = "0.5"
v_htmlescape = "0.4"

proc-macro2-impersonated = { version = "0.1", features = ["span-locations"] }
quote-impersonated = "0.1"
syn-impersonated = { version= "0.1", features = ["full", "visit", "visit-mut", "extra-traits"] }

derive_more = "0.99"

[package.metadata.docs.rs]
all-features = true
