[package]
name = "yarte_hir"
version = "0.11.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Intermediate representation for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_hir"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
wasm-app = []

[dependencies]
yarte_helpers = { version = "0.11.2", path = "../yarte_helpers" }
yarte_parser = { version = "0.11.2", path = "../yarte_parser" }

v_eval = "0.6"
v_htmlescape = "0.9"

proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version= "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }

derive_more = "0.99"

[package.metadata.docs.rs]
all-features = true
