[package]
name = "yarte_hir"
version = "0.15.4"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Intermediate representation for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_hir"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
wasm-app = []
deser = ["serde"]

[dependencies]
yarte_helpers = { version = "~0.15.1", path = "../yarte_helpers" }
yarte_parser = { version = "~0.15.0", path = "../yarte_parser" }

v_eval = "0.6"
v_htmlescape = "~0.14.1"

proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version= "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }

derive_more = "0.99"

serde = { version = "~1.0.126", optional = true }

[package.metadata.docs.rs]
all-features = true
