[package]
name = "yarte_html"
version = "0.12.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Markup parser"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_html"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
# TODO: remove
yarte_parser = { version = "0.12.2", path = "../yarte_parser" }

mac = "0.1"
log = "0.4"
markup5ever = "0.10"

[build-dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full", "fold"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
