[package]
name = "yarte_lexer"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Lexer for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_lexer"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
gencode = { version = "0.0", path = "gencode", package = "yarte_lexer_gencode" }

quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

annotate-snippets = { version = "0.9", features = ["color"] }
derive_more = "0.99"
memchr = "2.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ron = "0.6"
glob = "0.3"
