[package]
name = "yarte_lexer"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Lexer for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_lexer"
edition = "2021"
keywords = ["markup", "template", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[features]
default = []
test = ['serde/derive']

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
yarte_strnom = { version = "0.0", path = '../yarte_strnom' }

quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

annotate-snippets = { version = "0.9", features = ["color"] }
derive_more = "0.99"
memchr = "2.5"

serde = { version = "1.0", optional = true }

[dev-dependencies]
ron = "0.8"
glob = "0.3"
