[package]
name = "yarte_parser"
version = "0.9.3"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Ast, lexer and parser for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_parser"
edition = "2018"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
yarte_helpers = { version = "0.9.3", path = "../yarte_helpers" }

quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

annotate-snippets = { version = "0.8", features = ["color"] }
derive_more = "0.99"
unicode-xid = "0.2"
