[package]
name = "yarte_parser"
version = "0.15.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Ast, lexer and parser for yarte"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_parser"
edition = "2021"
keywords = ["markup", "template", "handlebars", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
yarte_helpers = { workspace = true }

quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

annotate-snippets = { version = "0.9", features = ["color"] }
derive_more = "0.99"
unicode-xid = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ron = "0.8"
glob = "0.3"
