[package]
name = "yarte_rust"
version = "0.0.1"
edition = "2021"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Rust expressions parser for yarter"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_lexer"
keywords = ["markup", "template", "html"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[dependencies]
unicode-ident = "1.0"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0"

yarte_strnom = { workspace = true }

[dev-dependencies]
ron = "0.8"
glob = "0.3"
