[package]
name = "yarte_template"
version = "0.5.3"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
description = "Type-safe, compiled Handlebars"
categories = ["template-engine", "web-programming", "gui"]
documentation = "https://docs.rs/yarte_template"
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
keywords = ["markup", "template", "handlebars", "html", "web", "wasm"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/botika/yarte"
workspace = ".."

[badges]
travis-ci = { repository = "botika/yarte", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
mime = []

[dependencies]
yarte_helpers = { version = "0.5", path = "../yarte_helpers" }

